# zktls-risc0

./: .gitignore  .gitmodules  Cargo.toml  README.md  cron_feeder.sh  deployment-guide.md
.github/workflows/: main.yml
apps/: Cargo.toml  README.md
cli/: deploy_feeder.py  feed_feeder.py  parse_and_prove.py  request_storage.py  test.py
cli/addresses/ARTHERA_TESTNET/: BTCUSDT.txt  ETHBTC.txt  ETHUSDC.txt  ETHUSDT.txt  feeder.txt
cli/addresses/asset_testnet/: BTCUSDT.txt  ETHBTC.txt  ETHUSDC.txt  ETHUSDT.txt  feeder.txt
cli/addresses/neon_devnet/: BTCUSDT.txt  ETHBTC.txt  ETHUSDC.txt  ETHUSDT.txt  feeder.txt
cli/addresses/sepolia/: BTCUSDT.txt  ETHBTC.txt  ETHUSDC.txt  ETHUSDT.txt  feeder.txt
cli/utils/: network.py
contracts/: DataFeedFeeder.sol  DataFeedStorage.sol  EvenNumber.sol  IAutomataDcapAttestationFee.sol  IDataFeedFeeder.sol  IEvenNumber.sol  ImageID_manually_generated.sol  PairDataStruct.sol  README.md
data-provider/: script.py
methods/: Cargo.toml
methods/guest/: Cargo.toml
methods/shared_between_host_and_guest/: Cargo.toml
methods/shared_between_host_and_guest/src/: lib.rs
methods/src/: guest_data_structs.rs  lib.rs
pairs/: list.txt
script/: Deploy.s.sol
test_data_1/0/: prices.txt  prover_input.json  timestamps.txt
test_data_2/0/: prices.txt  prover_input.json  timestamps.txt
test_inputs/: 01.json  02.json
tests/: DataFeedFeeder.t.sol  EvenNumber.t.sol
