[package]
name = "guests"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "json-parser"
path = "src/bin/json_parser.rs"

[workspace]

[dependencies]
alloy-primitives = { version = "=0.8.3", default-features = false, features = ["rlp", "serde", "std"] }
alloy-sol-types = { version = "=0.8.3" }
risc0-zkvm = { version = "1.1", default-features = false, features = ['std'] }
json = "0.12"


[profile.release]
lto = "thin"
